Small CSS fix to prevent horizontal scrolling

--- a/public/styles/materialize/components/_navbar.scss
+++ b/public/styles/materialize/components/_navbar.scss
@@ -97,7 +97,7 @@ nav {
       height: 100%;
       font-size: 1.2rem;
       border: none;
-      padding-left: 2rem;
+      //padding-left: 2rem;
 
       &:focus, &[type=text]:valid, &[type=password]:valid,
       &[type=email]:valid, &[type=url]:valid, &[type=date]:valid {
