--- a/public/styles/materialize/materialize.css
+++ b/public/styles/materialize/materialize.css
@@ -5335,8 +5335,7 @@ nav {
     nav .input-field input {
       height: 100%;
       font-size: 1.2rem;
-      border: none;
-      padding-left: 2rem; }
+      border: none; }
       nav .input-field input:focus, nav .input-field input[type=text]:valid, nav .input-field input[type=password]:valid, nav .input-field input[type=email]:valid, nav .input-field input[type=url]:valid, nav .input-field input[type=date]:valid {
         border: none;
         box-shadow: none; }
