--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -79,7 +79,7 @@ header {
 		margin-left: 8px;
 	}
 	
-	#flash-messages .flash-message .flash-message-title {
+	.flash-message .flash-message-title {
 		margin: 0 -11px;
 		padding: 1px 0 1px 11px;
 	}
